--- a/documents/urban_simulation_report.qmd
+++ b/documents/urban_simulation_report.qmd
@@ -117,9 +117,9 @@ The **singly constrained model** constrains the total number of observations for
 
 $$
 T_{ij} = A_i O^{\alpha}_i D^{\gamma}_j f(c_{ij})
-$$
+$$ {#eq-orig}
 
-The destination constrained model fixes the total number at the destination. The parameter $A_i$ is determined so that the total at the origin is constrained, that is:
+The parameter $A_i$ is determined so that the total at the origin is constrained, that is:
 
 $$
 \sum_j T_{ij} = O_i \therefore A_i = \frac{1}{\sum_j D_j f(c_{ij})}
@@ -136,9 +136,9 @@ The **doubly constrained model** constrains both the total at the origin and des
 
 $$
 T_{ij} = A_i O^{\alpha}_i B_j D^{\gamma}_j \exp(-\beta c_{ij})
-$$
+$$ {#eq-dbl}
 
-#### Calibration
+#### Calibration of Cost Function
 
 The dataset used for analysis have the following data for every origin-destination pair for the London Underground Stations.
 
@@ -149,7 +149,7 @@ The dataset used for analysis have the following data for every origin-destinati
 
 Using this dataset, we will use the doubly constrained model to estimate the best cost function and parameters by comparing with the observed flow. Constraining both the total journeys for both the origin and destination will enable the full utilisation of observed data, enabling a most accurate calibration of the cost function.
 
-The doubly constrained model after a logarithm transformation into a Poisson expression can be written as:
+The doubly constrained model after a logarithm transformation of @eq-dbl into a Poisson expression can be written as:
 
 $$
 \ln(T_{ij}) = \ln A_i + \ln O^{\alpha}_i + \ln B_j + \ln D^{\gamma}_j + \ln f(c_{ij}) \\
@@ -175,15 +175,16 @@ For each cost function, we have run the Poisson Regression to calculate the opti
 : Comparison of results for the doubly constrained model using inverse power and negative exponential cost functions.
 
 From these results, the negative exponential model for the cost function has a better fit to the observed flows. When considering the scenarios, the cost function
+
 $$
 f(c_{ij}) = \exp(-\beta c_{ij}) \quad (\beta = -1.543 \times 10^{-4})
-$$
+$$ {#eq-beta}
 
 will be used.
 
 ### Scenarios
 
-The scenarios we will observe in this report are as follows:
+The scenarios we will observe in this report are summarised in @tbl-scenarios.
 
 | Scenario | Explanation |
 | :--- | :--- |
@@ -192,23 +193,35 @@ The scenarios we will observe in this report are as follows:
 
 : The scenarios explored in this report {#tbl-scenarios tbl-colwidths="[20,80]"}
 
+Since scenario A involves the change in the characteristics of the destination, the origin constrained model is used for the analysis to preserve the number of commuters starting their journeys in each area.
+
+#### Calibration of $\gamma$
+
+Since the origin-constrained model will be used for the analysis of the scenarios, the gamma variable introduced in @eq-orig must be calibrated before applying to the new scenarios. $\gamma$ with the highest R-squared value for estimating the original flow will be used, resulting as follows:
+
+$$
+\gamma = 7.556 \times 10^{-1} \quad (R^2 = 0.4680)
+$$ {#eq-gamma}
+
+
 #### Scenario A
 
-We will first decrease the number of jobs at Canary Wharf by 50%, from the original 58,772 to 29,386. We will use the origin-constrained model to simulate this behaviour. The procedure is as follows:
+We will first decrease the number of jobs at Canary Wharf by 50%, from the original 58,772 to 29,386. Using the origin-constrained model, the procedure is as follows:
 
-1. Calculate the flow based on the origin-constrained model $T_{ij} = A_i O_i D^{\gamma}_j \exp(-\beta c_{ij})$ to retrieve the optimal $\gamma$ value for this dataset. Values for parameter $\beta$ is determined upon calibration.
-2. Reduce the number of jobs at Canary Wharf (transform $D_j$ into $D'_j$)
-3. Recalibrate the adjusted $A'_i$ parameter with the new distribution of using the relationship $A'_i = \frac{1}{\sum_j D'^{\gamma}_j f(c_{ij})}$
-4. Calculate the new flows using the relationship $T'_{ij} = A'_i O_i D'^{\gamma}_j \exp(-\beta c_{ij})$
+1. Calculate the flow based on the origin-constrained model $T_{ij} = A_i O_i D^{\gamma}_j \exp(-\beta c_{ij})$ to retrieve the optimal $\gamma$ value for this dataset. The value for parameters $\beta, \gamma$ is derived from @eq-beta and @eq-gamma.
+1. Reduce the number of jobs at Canary Wharf (transform $D_j$ into $D'_j$)
+2. Recalibrate the adjusted $A'_i$ parameter with the new distribution of using the relationship $A'_i = \frac{1}{\sum_j D'^{\gamma}_j f(c_{ij})}$
+3. Calculate the new flows using the relationship $T'_{ij} = A'_i O_i D'^{\gamma}_j \exp(-\beta c_{ij})$
 
-The origin constrained model is used for the analysis to preserve the number of commuters starting their journeys in each area. We will observe how the destination of commuters changed in reaction to the decrease in jobs in Canary Wharf.
+Using the origin constrained model, we will observe how the destination of commuters changed in reaction to the decrease in jobs in Canary Wharf. 
 
-We have observed a significant drop in the number of 
+We have observed a significant drop in the number of journeys terminating at Canary Wharf from 47,690 in the original simulation to 29,496 in scenario A, which is 61.9 % of the original amount. As observable from @fig-OD-scenarioA, the decrease in the flows to Canary Wharf occured evenly among all origins, and has been redistributed into other destinations.
 
+![Comparison of the flows of OD pairs the original simulation and the flows under scenario A.](img/OD_change_scenarioA.png){#fig-OD-scenarioA}
 
 #### Scenario B
 
-We will consider 2 scenarios for the change in the cost of transport. Given the original parameter as $\beta$, the parameters $\beta_1, \beta_2$ for the two scenarios B1 and B2 will be modified as follows.
+We will consider 2 scenarios for the change in the cost of transport. Given the original parameter as $\beta$, the parameters $\beta_1, \beta_2$ for the two scenarios B1 and B2 will be modified as shown in @eq-paramsB and @fig-paramsB.
 
 $$
 \begin{cases}
@@ -216,20 +229,29 @@ $$
 \beta_2 = 10 \beta
 \end{cases}
 \quad (\beta = -1.543 \times 10^{-4})
-$$
+$$ {#eq-paramsB}
 
-![Distance decay function for the original scenario and the two modified scenarios.](img/dist_decay.png)
+![Distance decay function for the original scenario and the two modified scenarios.](img/dist_decay.png){#fig-paramsB}
 
+The flows between origin-destination pairs for each scenario, plotted by distance of journeys, are shown in @fig-OD-scenarioB. As the $\beta$ increases, the longer distance journeys are disencouraged, and the distribution of the distance of journeys become negatively skewed. 
 
+![Comparison of the distance of flows for scenario B and the original prediction.](img/OD_change_scenarioB.png){#fig-OD-scenarioB}
 
 #### Discussion
 
-In scenario A, we have observed a significant drop in the number of journeys terminating at Canary Wharf.
+In this section, we will discuss the impact of each scenario on the distribution of flows in the underground network. The  measurements summarised in @tbl-measurements are considered to examine the changes that occured as a result of each scenario.
+
+| Measurement | Explanation |
+| --- | --- |
+| Quantity of change in destination | The number of flows that have different destination compared to the original scenario. A larger number of change in destination indicate larger impact. |
+| Mean distance of journeys | The mean distance of all journeys simulated in each scenario. A larger change in the distance compared to the original simulation indicate larger impact. |
+
+: Measurements consider to quantify the change in flows for each scenario {#tbl-measurements}
 
 
 
-On the other hand, scenario B 
 
+Both measurements indicate that scenario B2 had the largest impact on the number of flows, and scenario A being the least impactful. 
 
 ---
 
