--- a/02_spatial_interaction.ipynb
+++ b/02_spatial_interaction.ipynb
@@ -2969,7 +2969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2987,7 +2987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3005,7 +3005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3032,7 +3032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3055,7 +3055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3077,7 +3077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3096,7 +3096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3115,7 +3115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3134,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3153,7 +3153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3173,7 +3173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3193,7 +3193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3212,7 +3212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3240,7 +3240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3263,7 +3263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3291,7 +3291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3301,7 +3301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3313,7 +3313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3341,7 +3341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3351,7 +3351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3361,7 +3361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3377,7 +3377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3390,7 +3390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3568,7 +3568,7 @@
        "4     0.000097  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3588,7 +3588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -4017,7 +4017,7 @@
        "[399 rows x 399 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4033,7 +4033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4462,7 +4462,7 @@
        "[399 rows x 399 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4482,7 +4482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4492,7 +4492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4512,7 +4512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -4677,7 +4677,7 @@
        "[398 rows x 5 columns]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4688,7 +4688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4853,7 +4853,7 @@
        "[398 rows x 5 columns]"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4864,7 +4864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4874,10 +4874,11 @@
        "flow_pred_model2o_value    47690.569044\n",
        "flow_pred_scenarioA        29496.662363\n",
        "difference_scenarioA      -18193.906680\n",
+       "change_ratio                   0.618501\n",
        "Name: Canary Wharf, dtype: float64"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4888,7 +4889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4921,7 +4922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4993,7 +4994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -5002,7 +5003,7 @@
        "18193.906680307606"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5014,7 +5015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -5376,7 +5377,7 @@
        "[61413 rows x 19 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5397,7 +5398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5429,7 +5430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -5571,7 +5572,7 @@
        "[1500 rows x 5 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5591,7 +5592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -5626,7 +5627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5638,7 +5639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5668,7 +5669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -6097,7 +6098,7 @@
        "[399 rows x 399 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6109,7 +6110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -6538,7 +6539,7 @@
        "[399 rows x 399 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6550,7 +6551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -6907,7 +6908,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6919,7 +6920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -7276,7 +7277,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7288,7 +7289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -7305,7 +7306,7 @@
        "Name: distance, dtype: float64"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7316,7 +7317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -7397,7 +7398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -7649,7 +7650,7 @@
        "[61413 rows x 12 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7667,7 +7668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -8066,7 +8067,7 @@
        "[61413 rows x 22 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8093,7 +8094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
