--- a/documents/urban_simulation_report.bib
+++ b/documents/urban_simulation_report.bib
@@ -1,3 +1,30 @@
+@misc{2017,
+  title = {A.6 -- {{Graph Theory}}: {{Measures}} and {{Indices}} {\textbar} {{The Geography}} of {{Transport Systems}}},
+  shorttitle = {A.6 -- {{Graph Theory}}},
+  year = {2017},
+  month = dec,
+  urldate = {2024-03-27},
+  abstract = {Graph theory relies on several measures and indices that assess the efficiency of transportation networks.},
+  langid = {american},
+  file = {C:\Users\Soki\Zotero\storage\6KVFXJAN\graph-theory-measures-indices.html}
+}
+
+@article{cerqueti2019,
+  title = {Measuring Network Resilience through Connection Patterns},
+  author = {Cerqueti, Roy and Ferraro, Giovanna and Iovanella, Antonio},
+  year = {2019},
+  month = aug,
+  journal = {Reliability Engineering \& System Safety},
+  volume = {188},
+  pages = {320--329},
+  issn = {0951-8320},
+  doi = {10.1016/j.ress.2019.03.030},
+  urldate = {2024-03-27},
+  abstract = {Networks are at the core of modeling many engineering contexts, mainly in the case of infrastructures and communication systems. The resilience of a network, which is the property of the system capable of absorbing external shocks, is then of paramount relevance in the applications. This paper deals with this topic by advancing a theoretical proposal for measuring the resilience of a network. The proposal is based on the study of the shocks propagation along the patterns of connections among nodes. The theoretical model is tested on the real-world instances of two important airport systems in the US air traffic network: Illinois (including the hub of Chicago) and New York states (with JFK airport).},
+  keywords = {Air traffic systems,Networks,Paths,Resilience,Weighted arcs},
+  file = {C:\Users\Soki\Zotero\storage\DACEYBYG\Cerqueti et al. - 2019 - Measuring network resilience through connection pa.pdf}
+}
+
 @article{flowerdew1982,
   title = {A {{Method}} of {{Fitting}} the {{Gravity Model Based}} on the {{Poisson Distribution}}*},
   author = {Flowerdew, Robin and Aitkin, Murray},
@@ -11,4 +38,104 @@
   urldate = {2024-01-19},
   langid = {english},
   file = {C\:\\Users\\Soki\\Zotero\\storage\\RPJ7VSLW\\Flowerdew and Aitkin - 1982 - A Method of Fitting the Gravity Model Based on the.pdf;C\:\\Users\\Soki\\Zotero\\storage\\WXNR4IHU\\j.1467-9787.1982.tb00744.html}
+}
+
+@article{katifori2010,
+  title = {Damage and {{Fluctuations Induce Loops}} in {{Optimal Transport Networks}}},
+  author = {Katifori, Eleni and Sz{\"o}ll{\H o}si, Gergely J. and Magnasco, Marcelo O.},
+  year = {2010},
+  month = jan,
+  journal = {Physical Review Letters},
+  volume = {104},
+  number = {4},
+  pages = {048704},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.104.048704},
+  urldate = {2024-03-27},
+  abstract = {Leaf venation is a pervasive example of a complex biological network, endowing leaves with a transport system and mechanical resilience. Transport networks optimized for efficiency have been shown to be trees, i.e., loopless. However, dicotyledon leaf venation has a large number of closed loops, which are functional and able to transport fluid in the event of damage to any vein, including the primary veins. Inspired by leaf venation, we study two possible reasons for the existence of a high density of loops in transport networks: resilience to damage and fluctuations in load. In the first case, we seek the optimal transport network in the presence of random damage by averaging over damage to each link. In the second case, we seek the network that optimizes transport when the load is sparsely distributed: at any given time most sinks are closed. We find that both criteria lead to the presence of loops in the optimum state.},
+  file = {C\:\\Users\\Soki\\Zotero\\storage\\JGGEGJAU\\Katifori et al. - 2010 - Damage and Fluctuations Induce Loops in Optimal Tr.pdf;C\:\\Users\\Soki\\Zotero\\storage\\R4BTWHZT\\PhysRevLett.104.html}
+}
+
+@article{latora2007,
+  title = {A Measure of Centrality Based on Network Efficiency},
+  author = {Latora, V. and Marchiori, M.},
+  year = {2007},
+  month = jun,
+  journal = {New Journal of Physics},
+  volume = {9},
+  number = {6},
+  pages = {188},
+  issn = {1367-2630},
+  doi = {10.1088/1367-2630/9/6/188},
+  urldate = {2024-03-27},
+  abstract = {We introduce delta centralities, a new class of measures of structural centrality for networks. In particular, we focus on a measure in this class, the information centrality CI, which is based on the concept of efficient propagation of information over the network. CI is defined for both valued and non-valued graphs, and applies to groups as well as individuals. The measure is illustrated and compared with respect to the standard centrality measures by using a classic network data set. The statistical distribution of information centrality is investigated by considering large computer generated graphs and two networks from the real world.},
+  langid = {english},
+  file = {C:\Users\Soki\Zotero\storage\4CEYIT5V\Latora and Marchiori - 2007 - A measure of centrality based on network efficienc.pdf}
+}
+
+@article{paaswell2012,
+  title = {Approaches to {{Infrastructure Redevelopment}}, {{WTC}}, {{Lower NYC}} and the {{Region}}},
+  author = {Paaswell, Robert E.},
+  year = {2012},
+  month = apr,
+  pages = {215--226},
+  publisher = {American Society of Civil Engineers},
+  doi = {10.1061/40717(148)18},
+  urldate = {2024-03-27},
+  langid = {english},
+  file = {C:\Users\Soki\Zotero\storage\HDC8M4W2\Paaswell - 2012 - Approaches to Infrastructure Redevelopment, WTC, L.pdf}
+}
+
+@inproceedings{plutov2013,
+  title = {The Delta-Betweenness Centrality},
+  author = {Plutov, Alexander and Segal, Michael},
+  year = {2013},
+  month = sep,
+  pages = {3376--3380},
+  doi = {10.1109/PIMRC.2013.6666731},
+  abstract = {In this paper we consider the extension of the betweenness centrality measure which is used in social and computer communication networks to estimate the potential monitoring and control capabilities a node may have on data flowing in the network. Unlike the standard betweenness centrality measure which takes into account only the shortest paths between the nodes of given network, our, so-called {$\Delta$}-betweenness centrality measure is based on short paths between the nodes. We present an efficient algorithm for computing this measure and show experimental results supporting the importance of newly defined measure.},
+  file = {C:\Users\Soki\Zotero\storage\NQPMQRA9\Plutov and Segal - 2013 - The delta-betweenness centrality.pdf}
+}
+
+@misc{transportforlondon2023b,
+  title = {A Brief History of the {{Underground}}},
+  author = {{Transport for London}},
+  year = {2023},
+  journal = {Transport for London},
+  urldate = {2024-03-27},
+  abstract = {The roots of the London Underground go back to the opening of the Thames Tunnel in 1843},
+  howpublished = {https://www.tfl.gov.uk/corporate/about-tfl/culture-and-heritage/londons-transport-a-history/london-underground/a-brief-history-of-the-underground},
+  langid = {british},
+  file = {C:\Users\Soki\Zotero\storage\2RYSSMJA\a-brief-history-of-the-underground.html}
+}
+
+@article{wyatt2002,
+  title = {Subway {{Service}} to {{Resume On Routes Closed After}} 9/11},
+  author = {Wyatt, Edward},
+  year = {2002},
+  month = sep,
+  journal = {The New York Times},
+  issn = {0362-4331},
+  urldate = {2024-03-27},
+  abstract = {Subway service on lines serving Brooklyn, West Side of Manhattan and Bronx will return to normal for first time in year on Sept 15, when three of four subway stations closed since World Trade Center atttack are to reopen (S)},
+  chapter = {New York},
+  langid = {american},
+  keywords = {New York City,Stations and Terminals (Passenger),Subways,Terrorism,Transit Systems,World Trade Center (NYC)},
+  file = {C:\Users\Soki\Zotero\storage\VCST7S8C\subway-service-to-resume-on-routes-closed-after-9-11.html}
+}
+
+@article{zhang2020,
+  title = {Resilience {{Measure}} of {{Network Systems}} by {{Node}} and {{Edge Indicators}}},
+  author = {Zhang, Chao and Xu, Xin and Dui, Hongyan},
+  year = {2020},
+  month = oct,
+  journal = {Reliability Engineering \& System Safety},
+  volume = {202},
+  pages = {107035},
+  issn = {0951-8320},
+  doi = {10.1016/j.ress.2020.107035},
+  urldate = {2024-03-27},
+  abstract = {This paper explores and analyzes resilience measures in network systems from different perspectives, which is beneficial to maintain the function of the whole networks. Few papers study resilience by using intermediate indicators. They straightly correlate resilience with basic entities, ignoring the modularized impact. Furthermore, some literatures do not further explain how nodes and edges play different roles in affecting network resilience. In this paper, resilience measures are proposed from perspective of various network-related elements, including the node and edge indicators in the network system. Through analyzing the characteristics of nodes and edges during failure, the matrices of node resilience and edge resilience are structured. Then, by processing and iterating two types of matrices, the resilience of the entire network is measured. The effect of node resilience and edge resilience on the network system is discussed. Our results show that node-related and edge-related indicators are both suitable to measure local stability. Besides, nodes always have a greater influence on network resilience than edges. Finally, a numerical example is given to verify the rationality of the proposed measures.},
+  keywords = {Matrix iteration,Network system,Node and edge indicators,Resilience measure},
+  file = {C\:\\Users\\Soki\\Zotero\\storage\\IC2KFZM4\\Zhang et al. - 2020 - Resilience Measure of Network Systems by Node and .pdf;C\:\\Users\\Soki\\Zotero\\storage\\V6RSQLV9\\S0951832020305366.html}
 }
